Mounts always happen on the currently focused tab, instead of the tab that was selected when asking to mount
Affected version
- Nightly flatpak: Yes
- Other: 43.1 on Fedora 37, and every other previous version of Nautilus
Steps to reproduce
- Open multiple two folder tabs, A and B (or more)
- In one the second tab (tab B), click one of your slow-to-mount locations in the sidebar (ex: a disconnected Nextcloud account, or some traditional HDD that is asleep and needs to wake up to be mounted and decrypted)
- At the same time / shortly after, switch to another tab, such as tab A
Current behavior
When the mount is ready, it replaces the contents of tab A, instead of tab B.
Expected behavior
Display in tab B, as this is where I initiated the action.
I encounter this problem quite often, when I start mounting something and in the meantime switch to the other tab where I want to copy/cut something from, only for that tab to be replaced by the target destination (and thus losing my state and flow in "tab A"), and "tab B" to remain a useless tab showing my Home directory.
It is a performance issue in two ways:
- It is most likely due to a race condition
- It makes you lose the state of your folder, and will force you to restore/reload it, which is very wasteful (i.e. you will have to process various folders views multiple times)
Edited by Jeff Fortin